# Marginalia

./: .cursorrules  .editorconfig  .gitignore  AGENTS.md  AI-CONTEXT.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE.placeholder  Makefile  NEXT.md  README.md  SECURITY.md  package-lock.json  pyproject.toml
.claude/commands/: review-push.md
.codex/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  bootstrap-gh.sh  copilot-instructions.md  labels.md  milestones.md
.github/ISSUE_TEMPLATE/: architecture-decision.yml  bug.yml  feature.yml  research-spike.yml
.github/workflows/: ci.yml
apps/android/: README.md
apps/backend/src/marginalia_backend/: __init__.py  __main__.py  bootstrap.py  gateway.py  main.py  runtime.py  serialization.py  stdio_server.py
apps/cli-rs/: Cargo.toml
apps/cli-rs/src/: main.rs
apps/cli/src/marginalia_cli/: __init__.py  __main__.py  bootstrap.py  main.py  shell.py
apps/desktop/: README.md
apps/ios/: README.md
apps/tui-rs/: Cargo.toml  README.md  marginalia.toml  marginalia.toml.template
apps/tui-rs/src/: app.rs  backend.rs  backend_alpha.rs  config.rs  logger.rs  main.rs
benchmark/: README.md
benchmark/macos-apple-silicon/: run.sh
benchmark/macos-apple-silicon/python/: bench_kokoro_onnx.py  bench_melotts.py  bench_mlx.py  bench_pytorch_mps.py  requirements.txt
benchmark/macos-apple-silicon/rust/: Cargo.toml
benchmark/macos-apple-silicon/rust-mlx/: Cargo.toml
benchmark/macos-apple-silicon/rust-mlx/src/: main.rs
benchmark/macos-apple-silicon/rust-voice/: Cargo.toml
benchmark/macos-apple-silicon/rust-voice/src/: main.rs
benchmark/macos-apple-silicon/rust/src/: main.rs
crates/: README.md
crates/marginalia-config/: Cargo.toml
crates/marginalia-config/src/: lib.rs
crates/marginalia-core/: Cargo.toml  README.md
crates/marginalia-core/src/: lib.rs  result.rs
crates/marginalia-core/src/application/: mod.rs  state_machine.rs
crates/marginalia-core/src/domain/: document.rs  mod.rs  note.rs  reading_session.rs  rewrite.rs  search.rs  summary.rs
crates/marginalia-core/src/events/: mod.rs  models.rs
crates/marginalia-core/src/frontend/: capabilities.rs  commands.rs  envelopes.rs  events.rs  gateway.rs  mod.rs  queries.rs  snapshots.rs
crates/marginalia-core/src/ports/: capabilities.rs  events.rs  importing.rs  llm.rs  mod.rs  playback.rs  runtime.rs  storage.rs  stt.rs  tts.rs
crates/marginalia-devtools/: Cargo.toml  README.md
crates/marginalia-devtools/src/: main.rs
crates/marginalia-ffi/: README.md
crates/marginalia-import-epub/: Cargo.toml  README.md
crates/marginalia-import-epub/src/: lib.rs
crates/marginalia-import-pdf/: Cargo.toml
crates/marginalia-import-pdf/src/: lib.rs
crates/marginalia-import-text/: Cargo.toml  README.md
crates/marginalia-import-text/src/: lib.rs
crates/marginalia-import-url/: Cargo.toml  README.md
crates/marginalia-import-url/src/: lib.rs
crates/marginalia-models/: Cargo.toml
crates/marginalia-models/src/: lib.rs
crates/marginalia-playback-host/: Cargo.toml  README.md
crates/marginalia-playback-host/src/: lib.rs
crates/marginalia-provider-fake/: Cargo.toml  README.md
crates/marginalia-provider-fake/src/: events.rs  lib.rs  llm.rs  playback.rs  storage.rs  stt.rs  tts.rs
crates/marginalia-runtime/: Cargo.toml  README.md
crates/marginalia-runtime/src/: builder.rs  events.rs  frontend.rs  lib.rs
crates/marginalia-storage-sqlite/: Cargo.toml  README.md
crates/marginalia-storage-sqlite/migrations/: 001_baseline.sql  002_active_session_flag.sql
crates/marginalia-storage-sqlite/src/: database.rs  lib.rs  repositories.rs
crates/marginalia-stt-apple/: Cargo.toml  README.md
crates/marginalia-stt-apple/src/: aec_pipeline.rs  lib.rs
crates/marginalia-stt-vosk/: Cargo.toml  README.md
crates/marginalia-stt-vosk/src/: lib.rs
crates/marginalia-stt-whisper/: Cargo.toml  README.md
crates/marginalia-stt-whisper/src/: lib.rs
crates/marginalia-tts-kokoro/: Cargo.toml  README.md
crates/marginalia-tts-kokoro/src/: lib.rs
crates/marginalia-tts-mlx/: Cargo.toml  README.md
crates/marginalia-tts-mlx/src/: lib.rs
docs/adr/: 0001-use-monorepo.md  0002-python-core.md  0003-cli-first.md  0004-swappable-stt-tts.md  0005-sqlite-initial-storage.md  0006-editor-integration-deferred.md  0007-lightweight-clean-architecture.md  0008-headless-backend-and-client-frontends.md  0009-use-external-parsers-for-document-formats.md  0010-adopt-kokoro-and-target-onnx-runtime.md  0011-beta-target-desktop-ios-android.md  0012-separate-core-contract-from-host-runtime.md  0013-adopt-rust-engine-with-native-host-shells.md
docs/architecture/: beta-repository-structure.md  context-diagram.md  domain-model.md  frontend-backend-boundary.md  frontend-client-guide.md  overview.md  provider-swappability.md  repository-structure.md  state-machine.md
docs/contributing/: development-setup.md  workflow.md
docs/migration/: alpha-to-beta-repo-mapping.md  python-removal-plan.md
docs/product/: alpha-0.1-local-loop.md  use-cases.md
docs/roadmap/: backlog-seed.md  milestones.md
docs/testing/: alpha-0.1-runtime-loop.md
docs/vision/: product-one-pager.md
examples/: alpha-local-config.toml  local-config.toml  sample-document.txt  voice-test-it.txt
models/: README.md
models/llm/: README.md
models/stt/: README.md
models/stt/vosk/: README.md
models/stt/whisper/: README.md
models/tts/: README.md
models/tts/kokoro/: README.md
models/tts/mlx/: README.md
scripts/: smoke.sh
tests/: conftest.py
tests/fixtures/: sample_document.txt
tests/integration/: test_ingest_note_flow.py
tests/unit/: test_backend_gateway.py  test_chunking.py  test_cli_smoke.py  test_command_router.py  test_config.py  test_fake_providers.py  test_pre_synthesis.py  test_progress_and_rewind.py  test_provider_selection.py  test_reading_runtime_service.py  test_real_kokoro.py  test_real_playback.py  test_real_vosk.py  test_shell.py  test_sqlite_repository.py  test_state_machine.py  test_whisper_cpp.py
(+3 files in other folders)
