[workspace]
members = [
    "apps/tui-rs",
    "crates/marginalia-core",
    "crates/marginalia-devtools",
    "crates/marginalia-import-text",
    "crates/marginalia-playback-host",
    "crates/marginalia-provider-fake",
    "crates/marginalia-runtime",
    "crates/marginalia-storage-sqlite",
    "crates/marginalia-stt-vosk",
    "crates/marginalia-stt-whisper",
    "crates/marginalia-tts-kokoro",
]
# marginalia-stt-vosk requires libvosk native library at link time.
# marginalia-stt-whisper requires whisper.cpp C++ compilation (cmake + clang/gcc).
# Both are excluded from default members so `cargo build/test` works without native deps.
# Build explicitly: cargo build -p marginalia-stt-vosk (needs libvosk)
#                   cargo build -p marginalia-stt-whisper (needs cmake + C++ compiler)
default-members = [
    "apps/tui-rs",
    "crates/marginalia-core",
    "crates/marginalia-devtools",
    "crates/marginalia-import-text",
    "crates/marginalia-playback-host",
    "crates/marginalia-provider-fake",
    "crates/marginalia-runtime",
    "crates/marginalia-storage-sqlite",
    "crates/marginalia-tts-kokoro",
]
resolver = "2"
