[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marginalia"
version = "0.1.0a0"
description = "Local AI-first voice reading and annotation engine."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "License pending." }
authors = [
  { name = "Maurizio Gobbo" },
]
dependencies = [
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<0.8",
]

[project.scripts]
marginalia = "marginalia_cli.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [
  "apps/cli/src",
  "packages/core/src",
  "packages/adapters/src",
  "packages/infra/src",
]
include = [
  "marginalia_cli*",
  "marginalia_core*",
  "marginalia_adapters*",
  "marginalia_infra*",
]

[tool.setuptools.package-data]
marginalia_cli = ["py.typed"]
marginalia_core = ["py.typed"]
marginalia_adapters = ["py.typed"]
marginalia_infra = ["py.typed", "config/commands/*.toml"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = [
  "apps/cli/src",
  "packages/core/src",
  "packages/adapters/src",
  "packages/infra/src",
  "tests",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
files = [
  "apps/cli/src",
  "packages/core/src",
  "packages/adapters/src",
  "packages/infra/src",
  "tests",
]
mypy_path = [
  "apps/cli/src",
  "packages/core/src",
  "packages/adapters/src",
  "packages/infra/src",
]
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
