[package]
name = "marginalia-tui"
version = "0.1.0"
edition = "2021"
description = "Rust TUI frontend for Marginalia"

[features]
default = []
vosk-stt          = ["dep:marginalia-stt-vosk"]
whisper-stt       = ["dep:marginalia-stt-whisper"]
whisper-stt-metal = ["dep:marginalia-stt-whisper", "marginalia-stt-whisper/metal"]
whisper-stt-cuda  = ["dep:marginalia-stt-whisper", "marginalia-stt-whisper/cuda"]
kokoro-coreml     = ["marginalia-tts-kokoro/coreml"]
kokoro-cuda       = ["marginalia-tts-kokoro/cuda"]
mlx-tts           = ["dep:marginalia-tts-mlx"]

[dependencies]
marginalia-stt-vosk = { path = "../../crates/marginalia-stt-vosk", optional = true }
marginalia-stt-whisper = { path = "../../crates/marginalia-stt-whisper", optional = true }
crossterm = "0.28"
marginalia-playback-host = { path = "../../crates/marginalia-playback-host" }
marginalia-runtime = { path = "../../crates/marginalia-runtime" }
marginalia-tts-mlx = { path = "../../crates/marginalia-tts-mlx", optional = true }
marginalia-tts-kokoro = { path = "../../crates/marginalia-tts-kokoro" }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
