[package]
name = "marginalia-tui"
version = "0.1.0"
edition = "2021"
description = "Rust TUI frontend for Marginalia"

[features]
default = []
whisper-stt       = ["marginalia-runtime/whisper-stt"]
whisper-stt-metal = ["whisper-stt", "marginalia-runtime/whisper-stt-metal"]
kokoro-coreml     = ["marginalia-tts-kokoro/coreml"]
kokoro-cuda       = ["marginalia-tts-kokoro/cuda"]
mlx-tts           = ["marginalia-runtime/mlx-tts"]
apple-stt         = ["marginalia-runtime/apple-stt"]

[dependencies]
crossterm = "0.28"
log = "0.4"
marginalia-config = { path = "../../crates/marginalia-config" }
marginalia-runtime = { path = "../../crates/marginalia-runtime", features = ["host-playback"] }
marginalia-tts-kokoro = { path = "../../crates/marginalia-tts-kokoro" }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
