[package]
name = "marginalia-playback-host"
version = "0.1.0"
edition = "2021"
description = "Host-side playback engine for Marginalia Beta desktop runtimes"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
marginalia-core = { path = "../marginalia-core" }
