[package]
name = "marginalia-storage-sqlite"
version = "0.1.0"
edition = "2021"
description = "SQLite persistence for the Marginalia Beta engine"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
marginalia-core = { path = "../marginalia-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
