[package]
name = "marginalia-tts-kokoro"
version = "0.1.0"
edition = "2021"
description = "Kokoro TTS asset discovery and Beta runtime integration scaffolding"

[dependencies]
marginalia-core = { path = "../marginalia-core" }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "api-24"] }
serde_json = "1"
