[package]
name = "tts-bench"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
default = []
coreml = ["ort/coreml"]

[dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "api-24"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
